chore: Add aliases for minigame command