@@ -36,13 +36,16 @@ public class DeathSwap implements Listener {
 
     private final JavaPlugin plugin;
     private final WorldManager worldManager;
-    private final Set<Player> players;
-    private final Set<Player> spectators = new HashSet<>();
+    private final Set<Player> gamePlayers;
+    private final Set<Player> alivePlayers;
+    private final Set<Player> spectators;
     private final int swapInterval;
     private BukkitRunnable swapTimerTask;
-    private final Map<Player, ItemStack[]> playerInventories = new HashMap<>();
-    private boolean creatorMode = false;
+    private final Map<Player, ItemStack[]> playerInventories;
+    private final Map<Player, ItemStack[]> playerArmor;
+    private boolean creatorMode;
     private String currentGameWorld;
+    private Location mainWorldSpawnLocation;
 
     /**
      * Constructor for the DeathSwap class.
@@ -54,8 +57,17 @@ public class DeathSwap implements Listener {
     public DeathSwap(JavaPlugin plugin, ConfigManager configManager, WorldManager worldManager) {
         this.plugin = plugin;
         this.worldManager = worldManager;
-        this.players = new HashSet<>();
+        this.gamePlayers = new HashSet<>();
+        this.alivePlayers = new HashSet<>();
+        this.spectators = new HashSet<>();
         this.swapInterval = configManager.getGameConfig("deathswap").getInt("swap_interval", 180);
+        this.playerInventories = new HashMap<>();
+        this.playerArmor = new HashMap<>();
+        this.creatorMode = false;
+        this.currentGameWorld = null;
+        this.mainWorldSpawnLocation = Bukkit.getWorld(plugin.getConfig().getString("main_world", "world"))
+                .getSpawnLocation();
+
         Bukkit.getPluginManager().registerEvents(this, plugin);
     }
 
@@ -66,22 +78,20 @@ public class DeathSwap implements Listener {
      * @param playerNames   The list of player names to include in the game.
      */
     public void start(CommandSender commandSender, List<String> playerNames) {
+        if (isGameRunning()) {
+            commandSender.sendMessage(BROADCAST_PREFIX + "A game is already in progress.");
+            return;
+        }
+
         String worldName = "deathswap_" + System.currentTimeMillis();
         worldManager.createNewWorld(worldName);
+        currentGameWorld = worldName;
         double borderSize = plugin.getConfig().getDouble("deathswap_border_size", 1000);
         worldManager.setWorldBorder(worldName, borderSize);
         worldManager.teleportPlayersToWorld(playerNames, worldName);
 
-        startGame(playerNames, commandSender);
-        commandSender.sendMessage("DeathSwap game started in world: " + worldName);
-    }
-
-    public void startGame(List<String> playerNames, CommandSender commandSender) {
-        if (isGameRunning()) {
-            return;
-        }
-
-        players.clear();
+        gamePlayers.clear();
+        alivePlayers.clear();
         spectators.clear();
         List<Player> validPlayers = validatePlayers(playerNames, commandSender);
 
@@ -89,23 +99,46 @@ public class DeathSwap implements Listener {
             return;
         }
 
+        gamePlayers.addAll(validPlayers);
+        alivePlayers.addAll(validPlayers);
+        // log alive players
+        plugin.getLogger().info("Alive players: " + alivePlayers.size());
         preparePlayersForGame(validPlayers);
         announceGameStart(validPlayers);
         startSwapTimer();
+        commandSender.sendMessage(BROADCAST_PREFIX + "DeathSwap game started in world: " + worldName);
     }
 
+    /**
+     * Checks if a game is currently running.
+     *
+     * @return True if a game is running, false otherwise.
+     */
     private boolean isGameRunning() {
         return swapTimerTask != null && !swapTimerTask.isCancelled();
     }
 
+    /**
+     * Checks if there are enough players to start the game.
+     *
+     * @param validPlayers  The list of valid players.
+     * @param commandSender The sender of the command.
+     * @return True if there are enough players, false otherwise.
+     */
     private boolean hasEnoughPlayers(List<Player> validPlayers, CommandSender commandSender) {
         if (validPlayers.size() < 2) {
-            commandSender.sendMessage("Not enough players to start the game. Minimum 2 players required.");
+            commandSender.sendMessage(
+                    BROADCAST_PREFIX + "Not enough players to start the game. Minimum 2 players required.");
             return false;
         }
         return true;
     }
 
+    /**
+     * Announces the start of the game to all players.
+     *
+     * @param validPlayers The list of valid players.
+     */
     private void announceGameStart(List<Player> validPlayers) {
         String playerNames = validPlayers.stream().map(Player::getName).collect(Collectors.joining(", "));
         Bukkit.broadcastMessage(BROADCAST_PREFIX + "Game is starting with players: " + playerNames);
@@ -122,7 +155,6 @@ public class DeathSwap implements Listener {
         List<Player> validPlayers = new ArrayList<>();
         List<String> offlinePlayers = new ArrayList<>();
 
-        // Validate all players before starting the game
         for (String name : playerNames) {
             Player player = Bukkit.getPlayerExact(name);
             if (player != null && player.isOnline()) {
@@ -132,7 +164,6 @@ public class DeathSwap implements Listener {
             }
         }
 
-        // Notify about offline players
         if (!offlinePlayers.isEmpty()) {
             String offlineMessage = BROADCAST_PREFIX + "The following players are offline or not found: "
                     + String.join(", ", offlinePlayers);
@@ -143,17 +174,23 @@ public class DeathSwap implements Listener {
     }
 
     /**
-     * Prepares the players for the game by adding them to the game and clearing
-     * their inventories.
+     * Prepares the players for the game by adding them to the game, saving their
+     * inventories
+     * and armor contents, and clearing their inventories.
      *
      * @param validPlayers The list of valid players to prepare.
      */
     private void preparePlayersForGame(List<Player> validPlayers) {
-        // Add players to the game and clear their inventories
         for (Player player : validPlayers) {
-            players.add(player);
+            // Save inventory contents
             playerInventories.put(player, player.getInventory().getContents());
+
+            // Save armor contents
+            playerArmor.put(player, player.getInventory().getArmorContents());
+
+            // Clear inventory and armor
             player.getInventory().clear();
+            player.getInventory().setArmorContents(null);
         }
     }
 
@@ -189,7 +226,7 @@ public class DeathSwap implements Listener {
      */
     private void broadcastCountdown(int seconds) {
         String message = BROADCAST_PREFIX + "Swapping in " + seconds + " second" + (seconds == 1 ? "" : "s") + "!";
-        for (Player player : players) {
+        for (Player player : gamePlayers) {
             player.sendMessage(message);
             player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_PLING, 1.0f, 1.0f);
         }
@@ -199,16 +236,13 @@ public class DeathSwap implements Listener {
      * Swaps the locations of the players.
      */
     private void swapPlayers() {
-        if (players.size() < 2) {
+        if (alivePlayers.size() < 2) {
             stopGame();
             return;
         }
 
-        List<Location> locations = players.stream()
-                .map(Player::getLocation)
-                .collect(Collectors.toList());
-
-        List<Player> playerList = new ArrayList<>(players);
+        List<Location> locations = alivePlayers.stream().map(Player::getLocation).toList();
+        List<Player> playerList = new ArrayList<>(alivePlayers);
         Collections.shuffle(playerList);
 
         for (int i = 0; i < playerList.size(); i++) {
@@ -222,11 +256,23 @@ public class DeathSwap implements Listener {
         }
     }
 
-    @EventHandler
-    public void onPlayerRespawn(PlayerRespawnEvent event) {
+    public void handlePlayerRespawn(PlayerRespawnEvent event) {
         Player player = event.getPlayer();
-        if (spectators.contains(player)) {
-            player.setGameMode(GameMode.SPECTATOR);
+        plugin.getLogger().info("Handling player respawn for: " + player.getName());
+        plugin.getLogger().info("Player is in spectators: " + spectators.contains(player));
+        plugin.getLogger().info("Player is in alivePlayers: " + alivePlayers.contains(player));
+        if (spectators.contains(player) || alivePlayers.contains(player)) {
+            if (alivePlayers.size() > 1) {
+                plugin.getLogger()
+                        .info("More than one player left, setting respawn location to current game world spawn.");
+                player.setGameMode(GameMode.SPECTATOR);
+                event.setRespawnLocation(Bukkit.getWorld(currentGameWorld).getSpawnLocation());
+            } else {
+                plugin.getLogger().info("One or no players left, setting respawn location to main world spawn.");
+                event.setRespawnLocation(mainWorldSpawnLocation);
+            }
+        } else {
+            plugin.getLogger().info("Player is not part of the game.");
         }
     }
 
@@ -238,85 +284,99 @@ public class DeathSwap implements Listener {
             swapTimerTask.cancel();
             swapTimerTask = null;
         }
-        // Restore players' inventories
-        for (Player player : players) {
+
+        for (Player player : gamePlayers) {
             if (player != null && player.isOnline()) {
                 ItemStack[] savedInventory = playerInventories.get(player);
+                ItemStack[] savedArmor = playerArmor.get(player);
                 if (savedInventory != null) {
                     player.getInventory().setContents(savedInventory);
+                    player.getInventory().setArmorContents(savedArmor);
                 }
+                player.teleport(mainWorldSpawnLocation);
             }
         }
         playerInventories.clear();
-        players.clear();
+        playerArmor.clear();
+        gamePlayers.clear();
+        alivePlayers.clear();
         spectators.clear();
-        // Teleport players back to the main world
-        String mainWorld = plugin.getConfig().getString("main_world", "world");
-        for (Player player : players) {
-            if (player != null && player.isOnline()) {
-                player.teleport(Bukkit.getWorld(mainWorld).getSpawnLocation());
-            }
-        }
+        if (currentGameWorld != null) {
+            worldManager.unloadWorld(currentGameWorld);
+            plugin.getLogger().info("Attempting to delete world: " + currentGameWorld);
+            try {
+                worldManager.removeAllPlayersFromWorld(currentGameWorld);
+                worldManager.deleteWorld(currentGameWorld);
 
-        // Delete the DeathSwap world
-        worldManager.deleteWorld(currentGameWorld);
-        currentGameWorld = null;
+                plugin.getLogger().info("Successfully deleted world: " + currentGameWorld);
+            } catch (Exception e) {
+                plugin.getLogger().severe("Failed to delete world: " + currentGameWorld + ". Error: " + e.getMessage());
+            }
+            currentGameWorld = null;
+            plugin.getLogger().info("Reset currentGameWorld to null");
+        } else {
+            plugin.getLogger().info("No world to delete: currentGameWorld is null");
+        }
     }
 
     public void handlePlayerDeath(PlayerDeathEvent event) {
         Player player = event.getEntity();
-        if (players.contains(player)) {
-            players.remove(player);
+        plugin.getLogger().info("Handling player death for: " + player.getName());
+        if (alivePlayers.contains(player)) {
+            plugin.getLogger().info("Player is part of the game, moving to spectators.");
             spectators.add(player);
             player.setGameMode(GameMode.SPECTATOR);
-            if (players.size() == 1) {
-                Player winner = players.iterator().next();
+            alivePlayers.remove(player);
+            if (alivePlayers.size() == 1) {
+                Player winner = alivePlayers.iterator().next();
                 Bukkit.broadcastMessage(BROADCAST_PREFIX + winner.getName() + " has won the game!");
-            }
-
-            if (players.size() < 2) {
                 stopGame();
             }
+
+            if (alivePlayers.size() < 2) {
+                stopGame();
+            }
+        } else {
+            plugin.getLogger().info("Player is not part of the game.");
         }
+        Bukkit.broadcastMessage(BROADCAST_PREFIX + "Player " + event.getEntity().getName() + " has died.");
+        Bukkit.broadcastMessage(BROADCAST_PREFIX + "Players: " + alivePlayers.size());
+        Bukkit.broadcastMessage(BROADCAST_PREFIX + "Spectators: " + spectators.size());
     }
 
-    /**
-     * Handles player disconnections during the game.
-     *
-     * @param player The player who disconnected.
-     */
-    public void handlePlayerDisconnect(Player player) {
-        if (players.contains(player)) {
-            players.remove(player);
+    public void handlePlayerDisconnect(Player event) {
+        Player player = event.getPlayer();
+        plugin.getLogger().info("Handling player disconnect for: " + player.getName());
+        if (alivePlayers.contains(player)) {
+            plugin.getLogger().info("Player is part of the game, removing from players.");
+            alivePlayers.remove(player);
 
-            // Restore the player's inventory
             ItemStack[] savedInventory = playerInventories.remove(player);
             if (savedInventory != null) {
                 player.getInventory().setContents(savedInventory);
             }
 
-            if (players.size() == 1) {
-                Player winner = players.iterator().next();
+            if (alivePlayers.size() == 1) {
+                Player winner = alivePlayers.iterator().next();
                 Bukkit.broadcastMessage(BROADCAST_PREFIX + winner.getName() + " has won the game!");
+                stopGame();
             }
 
-            if (players.size() < 2) {
+            if (alivePlayers.size() < 2) {
                 stopGame();
             }
         } else if (spectators.contains(player)) {
+            plugin.getLogger().info("Player is part of the spectators, removing from spectators.");
             spectators.remove(player);
+        } else {
+            plugin.getLogger().info("Player is not part of the game.");
         }
-    }
-
-    @EventHandler
-    public void onPlayerQuit(PlayerQuitEvent event) {
-        handlePlayerDisconnect(event.getPlayer());
     }
 
     /**
      * Enables or disables creator mode for the game admin.
      *
-     * @param enable True to enable creator mode, false to disable.
+     * @param creatorMode True to enable creator mode, false to disable.
      */
     public void setCreatorMode(boolean creatorMode) {
         this.creatorMode = creatorMode;
